# keeble

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  PLAN.md  README.md  TASKS.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  keeble_color_scheme.html  keeble_mobile_screens.html  pyproject.toml  supervisord.conf
.github/workflows/: docs.yml  release.yml
.planning/: PROJECT.md
backend/: Taskfile.yml  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/auth/: cookies.py  deps.py  router.py  security.py
backend/app/models/: document.py  family.py  user.py
backend/app/routers/: documents.py  members.py  setup.py  tags.py  uploads.py
backend/app/schemas/: auth.py  document.py  member.py  upload.py
backend/tests/: conftest.py  helpers.py  test_documents.py  test_health.py  test_members.py  test_setup_auth.py  test_tags.py  test_uploads.py
docs/: README.md  Taskfile.yml  _navbar.md  _sidebar.md  index.html
docs/admin/: docker.md  environment.md  settings.md  setup.md  users.md
docs/dev/: architecture.md  contributing.md  getting-started.md
docs/guide/: editing.md  importing.md  searching.md  tags.md  viewing.md
docs/source/: conf.py  contributing.md  index.md  quickstart.md
examples/: how-to-reboot-your-router.md
frontend/: Taskfile.yml  next.config.ts  package-lock.json
frontend/src/: proxy.ts
pocketbase/pb_hooks/: cleanup.pb.js  (+1 more)
reference/: keeble_prototype.html
scripts/: version.sh
web/: next.config.mjs  package-lock.json  package.json
(+102 files in other folders)
