[project]
name = "keeble"
version = "0.1.0"
description = "Keeble monorepo tooling manifest (documentation dependency group)"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
docs = [
    "sphinx>=9.1.0",
    "myst-parser>=5.1.0",
    "furo>=2025.12.19",
]

[tool.uv]
package = false
